# Huffman-code

./: BoolVector.cpp  BoolVector.h  CMakeLists.txt  CharacterSet.cpp  CharacterSet.h  HuffmanCode.cpp  HuffmanCode.h  README.md  main.cpp
include/: HuffmanCode.h
src/: HuffmanCode.cpp  main.cpp
